--- a/ancestors/index.html
+++ b/ancestors/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
   <div class="hero">
-    <img src="img/logo.png" alt="Vipul Logo" class="logo">
+    <img src="img/Sqr-va-logo.png" alt="Vipul Logo" class="logo">
     <h1>Message Intended for the Ancestors</h1>
     <img src="img/ancestors.jpg" alt="Photo of Ancestors" class="ancestors">
   </div>
