--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       </a>
     </li>
     <li>
-      <a href="message_to_ancestors.html" target="_blank">
-        Message Intended for the Ancestors
+      <a href="ancestors/index.html" target="_blank">
+        Message Intended for the beloved Ancestors
       </a>
     </li>
     <!-- More links can be added here as new pages are created -->
