--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <ul>
     <li>
-      <a href="land_detachment_reflection.html" target="_blank">
+      <a href="whoami/index.html" target="_blank">
         The Phase When I Remembered Who I Am
       </a>
     </li>
