--- a/whoami/index.html
+++ b/whoami/index.html
@@ -65,11 +65,31 @@
       font-size: 0.9rem;
       color: #777;
     }
+    .hero {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    .hero img.logo {
+      height: 60px;
+      margin-bottom: 1rem;
+    }
+    .hero img.ancestors {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+      margin-top: 1rem;
+    }
   </style>
 </head>
 <body>
+   <div class="hero">
+    <img src="https://github.com/anandvip/Vipul-2025/blob/main/img/Sqr-va-logo.png?raw=true" alt="Vipul Logo" class="logo">
+    <h1>we all are</h1>
+    <img src="https://github.com/anandvip/Vipul-2025/blob/main/whoami/img/pureawareness-no-identity.png?raw=true" alt="Photo of Ancestors" class="ancestors">
+  </div>
   <h1>The Phase When I Remembered Who I Am</h1>
   <p><strong>Vipul Anand | April 2025</strong></p>
+  
 
   <h2>What surfaced:</h2>
   <p>I realized that the heaviness I felt about selling our ancestral land wasn't just about land. It was about identity, legacy, and the child in me who never felt ready to let go of the one thing that felt like it was “mine.” This wasn’t immaturity. This was buried loyalty—to my family, to the soil, to a past that shaped me, but no longer defines me.</p>
