--- a/whoami/index.html
+++ b/whoami/index.html
@@ -84,7 +84,7 @@
 <body>
    <div class="hero">
     <img src="https://github.com/anandvip/Vipul-2025/blob/main/img/Sqr-va-logo.png?raw=true" alt="Vipul Logo" class="logo">
-    <h1>we all are</h1>
+    <h1>We all are just awareness, when will we start looking at it as it is?</h1>
     <img src="https://github.com/anandvip/Vipul-2025/blob/main/whoami/img/pureawareness-no-identity.png?raw=true" alt="Photo of Ancestors" class="ancestors">
   </div>
   <h1>The Phase When I Remembered Who I Am</h1>
