--- a/whoami/index.html
+++ b/whoami/index.html
@@ -73,11 +73,13 @@
       height: 60px;
       margin-bottom: 1rem;
     }
-    .hero img.ancestors {
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
-      margin-top: 1rem;
+    .wide-hero {
+      width: 100vw;
+      margin-left: calc(-1 * ((100vw - 100%) / 2));
+      background-image: url('https://github.com/anandvip/Vipul-2025/blob/main/whoami/img/pureawareness-no-identity.png?raw=true');
+      background-size: cover;
+      background-position: center;
+      height: 300px;
     }
   </style>
 </head>
@@ -85,7 +87,7 @@
    <div class="hero">
     <img src="https://github.com/anandvip/Vipul-2025/blob/main/img/Sqr-va-logo.png?raw=true" alt="Vipul Logo" class="logo">
     <h1>We all are just awareness, when will we start looking at it as it is?</h1>
-    <img src="https://github.com/anandvip/Vipul-2025/blob/main/whoami/img/pureawareness-no-identity.png?raw=true" alt="Photo of Ancestors" class="ancestors">
+     <div class="wide-hero"></div>
   </div>
   <h1>The Phase When I Remembered Who I Am</h1>
   <p><strong>Vipul Anand | April 2025</strong></p>
